# finance-manager

./: .env.example  .gitignore  .vercelignore  README.md  components.json  drizzle.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
api/: Dockerfile  README.md  __index.py  api.py  index.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  vercel.json
api/.serverless/: cloudformation-template-update-stack.json  meta.json  requirements  requirements.txt  serverless-state.json
migrations/: 0002_worried_killer_shrike.sql  0003_dazzling_zzzax.sql  0004_absent_vulcan.sql  0005_abandoned_johnny_storm.sql  relations.ts  schema.ts
migrations/meta/: 0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
ml/api/: main.py  pyproject.toml  requirements.txt
ml/model/: README.md  data_collector.py  debug.py  main.py  pyproject.toml
ml/model/datasets/: monthly_category_summary.csv  monthly_category_summary_full.csv  synthetic-dataset-expanded-v2.csv  synthetic-dataset-expanded.csv  synthetic-dataset.csv
ml/model/models/: lgbm_model_log.txt
model-trainer/database/: readme.md
model-trainer/model/: README.md  dataset-processor.py  lbm_expense_forecaster.pkl  model.py  pyproject.toml  xgb_expense_forecaster.pkl
src/: middleware.ts
src/app/: layout.tsx  loading.tsx
src/components/: badge.component.tsx  calendar-input.component.tsx  date-input.component.tsx  error-display.component.tsx  file-input.component.tsx  hint.component.tsx  (+7 more)
supabase/: config.toml
(+144 files in other folders)
